# petri-dish-core

./: Cargo.toml  README.md
benches/: body_benchmark.rs
src/: lib.rs
src/cell/: body.rs  chemical.rs  cmd.rs  genome.rs  mod.rs
src/environment/: mod.rs
