[package]
name = "petri-dish-core"
authors = ["0xDimay <HexDimay@yandex.ru>"]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.96.0"
readme = "README.md"

[dependencies]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }


[[bench]]
name = "body_benchmark"
harness = false
